--- a/LeposWPF/UI/Reports/Reports.xaml
+++ b/LeposWPF/UI/Reports/Reports.xaml
@@ -5,11 +5,12 @@
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:fa="http://schemas.fontawesome.io/icons/"
                       xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:xmz="http://schemas.xceed.com/wpf/xaml/toolkit"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:sys="clr-namespace:System;assembly=mscorlib"
                       xmlns:toolkit="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
                       xmlns:vsm="clr-namespace:System.Windows;assembly=WPFToolkit"
-                      Title="Deudas"
+                      Title="Reportes"
                       Width="1150"
                       Height="768"
                       FontSize="16"
@@ -19,11 +20,26 @@
                       WindowState="Maximized"
                       >
     <Window.Resources>
+        <DataTemplate x:Key="analizeTemplate">
+            <TextBlock >
+                <Hyperlink Click="Hyperlink_Click">
+                    <TextBlock Text="Analizar" />                                                                                    
+                </Hyperlink>                                    
+            </TextBlock>
+        </DataTemplate>
+        <!--  Alert Fade Animation  -->
+        <Storyboard x:Key="animate">
+
+            <DoubleAnimation Duration="0:0:3.5"
+                             From="1"
+                             Storyboard.TargetProperty="Opacity"
+                             To="0" />
+        </Storyboard>
     </Window.Resources>
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
         <Grid.RowDefinitions>
-            <RowDefinition Height="14*" />
-            <RowDefinition Height="86*"/>
+            <RowDefinition Height="27*" />
+            <RowDefinition Height="73*"/>
         </Grid.RowDefinitions>
         <Viewbox HorizontalAlignment="Left">
             <Border HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Margin="2,0,2,0" Grid.Row="0" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="0,0,0,0">
@@ -35,26 +51,69 @@
                             <ColumnDefinition Width="3*"></ColumnDefinition>
                             <ColumnDefinition Width="100"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
                         <Image Name="logoImage"
                                Grid.Column="3"
+                               Grid.RowSpan="2"
                                Margin="0"
                                Height="40"
                                ToolTip="Logo" 
                                Source="/Lepos;component/LocalResources/default_logo.png" />
                         <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
                             <Label Foreground="Gray">Inicio -</Label>
-                            <DatePicker Focusable="False"  Margin="10,0,0,0" Name="purchasesStartDatePicker"></DatePicker>
+                            <DatePicker Focusable="False"  Margin="10,0,0,0" Name="startDatePicker"></DatePicker>
                             <Label Margin="10,0,0,0" Foreground="Gray">Fin -</Label>
-                            <DatePicker Focusable="False" Margin="10,0,0,0" Name="purchasesEndDatePicker"></DatePicker>
-                            <ComboBox Name="typeReportComboBox" Margin="10,0,0,0">
+                            <DatePicker Focusable="False" Margin="10,0,0,0" Name="endDatePicker"></DatePicker>
+                            <ComboBox SelectionChanged="typeReportComboBox_SelectionChanged" Name="typeReportComboBox" Margin="10,0,0,0">
+                                <ComboBoxItem IsSelected="True">Elegir un tipo de reporte</ComboBoxItem>
+                                <ComboBoxItem>General</ComboBoxItem>
+                                <ComboBoxItem>Productos</ComboBoxItem>
+                                <ComboBoxItem>Proveedores</ComboBoxItem>
+                                <ComboBoxItem>Clientes</ComboBoxItem>
+                                <ComboBoxItem>Compras</ComboBoxItem>
+                                <ComboBoxItem>Ventas</ComboBoxItem>
                             </ComboBox>
+                            <ComboBox Name="frecuencyReportComboBox" IsEnabled="False" Margin="10,0,0,0">
+                                <ComboBoxItem IsSelected="True">Filtrar datos por :</ComboBoxItem>
+                                <ComboBoxItem>Año</ComboBoxItem>
+                                <ComboBoxItem>Mes</ComboBoxItem>
+                                <ComboBoxItem>Día</ComboBoxItem>
+                            </ComboBox>
+                        </StackPanel>
+                        <StackPanel Margin="0,10,0,0" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal">
                             <Button Name="reportButton" Click="reportButton_Click" Margin="10,0,0,0">
                                 <StackPanel Orientation="Horizontal">
                                     <fa:ImageAwesome Style="{StaticResource styleImageAwesome}" Icon="Search" />
                                     <fa:FontAwesome Style="{StaticResource styleFontAwesome}" Text="Ver Reporte" />
                                 </StackPanel>
                             </Button>
+                            <Button Name="chartButton" IsEnabled="False" Click="chartButton_Click"  Margin="10,0,0,0">
+                                <StackPanel Orientation="Horizontal">
+                                    <fa:ImageAwesome Style="{StaticResource styleImageAwesome}" Icon="AreaChart" />
+                                    <fa:FontAwesome Style="{StaticResource styleFontAwesome}" Text="Vista Gráfica" />
+                                </StackPanel>
+                            </Button>
+                            <Label Margin="0,0,10,0">Número de resultados: </Label>
+                            <xmz:IntegerUpDown AllowTextInput="false"  IsEnabled="False"  Width="100" Name="filterIntegerUpDown" Value="0" Increment="1" Minimum="0" Maximum="10" ValueChanged="filterIntegerUpDown_ValueChanged" />
                         </StackPanel>
+                        <Grid Name="alertStackPanel" Grid.Row="2" Grid.ColumnSpan="4">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="5*"></ColumnDefinition>
+                                <ColumnDefinition Width="5*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" FontSize="22" Foreground="Red" IsEnabled="False" TextWrapping="Wrap" Name="alertTextBlock" HorizontalAlignment="Stretch" />
+                            <ProgressBar Name="loadingProgressBar"
+                                             Margin="5"
+                                             HorizontalAlignment="Stretch"
+                                             VerticalAlignment="Stretch"
+                                             IsIndeterminate="False"
+                                             Grid.Column="1"
+                                             />
+                        </Grid>
                     </Grid>
                 </GroupBox>
             </Border>
@@ -64,7 +123,7 @@
                 <ScrollViewer 
                                   HorizontalScrollBarVisibility="Auto"
                                   VerticalScrollBarVisibility="Auto">
-                    <DataGrid Name="debtsDataGrid"
+                    <DataGrid Name="reportDataGrid"
                                       Margin="6,0,6,0"
                                       MaxColumnWidth="200"
                                       HorizontalAlignment="Stretch"
