--- a/LeposWPF/SplashScreen/SplashLoadingWindow.xaml
+++ b/LeposWPF/SplashScreen/SplashLoadingWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:LEPOSWPF.SplashScreen"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Loading LeposWPF" Height="436" Width="714" WindowStartupLocation="CenterScreen" 
+        Title="Cargando LeposWPF" Height="436" Width="714" WindowStartupLocation="CenterScreen" 
         ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="None">
     <Controls:MetroWindow.Resources>
         <ResourceDictionary>
