--- a/LeposWPF/App.xaml
+++ b/LeposWPF/App.xaml
@@ -1,4 +1,5 @@
-﻿<Application x:Class="LeposWPF.App"
+﻿
+    <Application x:Class="LeposWPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:LeposWPF"
