--- a/LeposWPF/UI/MainWindow.xaml
+++ b/LeposWPF/UI/MainWindow.xaml
@@ -85,6 +85,7 @@
                                     Text="Lepos Punto de Venta" />
 
                         <fa:FontAwesome Grid.Column="0"
+                                    Name="versionFontAwesome"
                                     Grid.Row="1"
                                     FontSize="18"
                                     Foreground="Red"
